<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_search"
            android:checked="true"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_follow"
            android:icon="@drawable/ic_menu_follow"
            android:title="@string/menu_follow" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_menu_download"
            android:title="@string/menu_download" />

    </group>

    <item android:title="更多">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
